# pellesc-setup

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README.ru.md  action.yml  bsd_echo.c  build-test-run.bat  clean-build.bat  cmake_report.cmake  detectPellesC.cmake  hello.c  run-build-test.bat  simple_false.c
.github/workflows/: cmake-multi-platform.yml
PellesC/: README.md  README.ru.md  _ids_.cmake  _patches_.cmake  _support_.cmake  detect.cmake  install.cmake  uninstall.cmake
PellesC/Modules/Compiler/: PellesC-ASM.cmake  PellesC-C.cmake  PellesC-DetermineCompiler.cmake  PellesC.cmake
PellesC/Modules/Platform/: Windows-PellesC-ASM.cmake  Windows-PellesC-ASM_POASM.cmake  Windows-PellesC-C.cmake  Windows-PellesC.cmake
tests/: CMakeLists.txt  bsd_echo.c  hello.c
tests/first/: hdr.h
tests/second/: hdr.h
